address sonar issues